# unitus

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configoutput.txt  configure  configure.ac
contrib/: bitcoin-qt.pro  unitus-qt.pro
contrib/macdeploy/: fancy.plist  macdeployqtplus
contrib/seeds/: makeseeds.py  nodes_main.txt  seeds.txt
doc/: Doxyfile  README_windows.txt
share/: genbuild.sh
src/: Makefile.am  Makefile.in  Makefile.qt.include  Makefile.test.include  alert.h  amount.cpp  auxpow.cpp  auxpow.h  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-config.h.in  bitcoin-config.h.in~  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  blakefast.c  chain.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  checkpoints.cpp  clientversion.cpp  clientversion.h  core.cpp  core.h  crypter.h  hashblake.h  init.cpp  key.cpp  key.h  lyra2RE.c  main.cpp  main.h  miner.cpp  miner.h  net.cpp  net.h  (+27 more)
src/consensus/: consensus.h  params.h
src/crypto/: hashX11.h  hashargon2d.h  hashblake.h  hashqubit.h  hashskein.h
src/crypto/argon2/: best.c  core.c  opt.c  ref.c
src/crypto/lyra2/: lyra2.c  lyra2RE.c
src/crypto/yescrypt/: yescrypt-best.c
src/policy/: policy.h
src/primitives/: block.cpp  block.h  pureheader.cpp  pureheader.h
src/qt/: Makefile.am  Makefile.in  addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  overviewpage.h  paymentserver.cpp  platformstyle.cpp  platformstyle.h  receivecoinsdialog.cpp  receivecoinsdialog.h  receiverequestdialog.cpp  recentrequeststablemodel.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsdialog.h  sendcoinsentry.cpp  signverifymessagedialog.cpp  spinimage.qml  splashscreen.cpp  transactiontablemodel.cpp  transactionview.cpp  (+6 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  askpassphrasedialog.ui  coincontroldialog.ui  debugwindow.ui  editaddressdialog.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bg_BG.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_AR.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_ES.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_et_EE.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_fr_FR.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  (+46 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns  unitus.icns
src/qt/test/: Makefile.am  Makefile.in
src/rpc/: blockchain.cpp  client.cpp  mining.cpp  misc.cpp  net.cpp  rawtransaction.cpp  server.cpp
src/script/: script.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  Makefile.in  alert_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  rpc_tests.cpp  transaction_tests.cpp
src/test/data/: base58_keys_valid.json
src/wallet/: rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h
